add create coupon page in view

--- a/MangoWork/Mango.web/Views/Shared/_Layout.cshtml
+++ b/MangoWork/Mango.web/Views/Shared/_Layout.cshtml
@@ -53,6 +53,11 @@
             </p>
         </div>
     </footer>
+    @RenderSection("scripts", required: false)
+    @section scripts {
+        <script src="~/js/custom-scripts.js"></script>
+    }
+
 
 </body>
 </html>
