--- a/MangoWork/Mango.web/Views/Shared/_Layout.cshtml
+++ b/MangoWork/Mango.web/Views/Shared/_Layout.cshtml
@@ -32,6 +32,24 @@
                     </li>
                     <li><a href="#">Contact</a></li>
                 </ul>
+                @if (!User.Identity.IsAuthenticated)
+                {
+                    <ul class="menu">
+                        <li><a asp-controller="Auth" asp-action="Login">Login</a></li>
+                        <li><a asp-controller="Auth" asp-action="Register">Register</a></li>
+                    </ul>
+                }
+                else{
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link " href="#">Hello @User.Identity.Name</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " asp-controller="Auth" asp-action="Logout">Logout</a>
+                        </li>
+                    }
+                }
+               
             </nav>
         </div>
     </header>
