add  project implment

--- a/MangoWork/Mango.web/Views/Shared/_Layout.cshtml
+++ b/MangoWork/Mango.web/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                         <a href="#">Content Management &#9662;</a>
                         <ul class="dropdown-menu">
                             <li><a asp-controller="Coupon" asp-action="CouponIndex">Coupon</a></li>
-                            <li><a href="#">App Development</a></li>
+                            <li><a class="dropdown-item" asp-controller="Product" asp-action="ProductIndex">Product</a></li>
                             <li><a href="#">Cloud Services</a></li>
                             <li><a href="#">Consulting</a></li>
                         </ul>
